# mucus-beta

./: .gitignore  TO_DO.txt  pyproject.toml
eval_scripts/: analyse_system.ipynb  structure_factor_rdf_mult.ipynb  structure_factor_rdf_mult_temp.ipynb  vicosity_stress_acf_mult.ipynb
mucus/: __init__.py  analysis.py  config.py  main.py  system.py  test_topology.py  topology.py  utils.py
mucus/tests/: test_system.py
mucus/tests/test_files/connected-S-mesh/configs/: cfg_connected-S-mesh.toml
mucus/tests/test_files/connected-S-mesh/initial_positions/: xyz_connected-S-mesh.npy
mucus/tests/test_files/connected-S-mesh/parameters/: param_connected-S-mesh.toml
mucus_rust/: __init__.py  analysis.py  config.py  system.py  topology.py  utils.py
plotting/: mpl_style.txt
tests/: test_analysis.py  test_h5.py  test_system.py  test_topology.py  test_utils.py  testwrite.hdf5
tests/connected-S-mesh/configs/: cfg_connected-S-mesh.toml
